--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
         <div class="summary">
             <h3>Summary</h3>
-            <div id="reaction">Reaction <span><span>80</span> / 100</span></div>
-            <div id="memory">Memory <span><span>92</span> / 100</div>
-            <div id="verbal">Verbal <span><span>61</span> / 100</div>
-            <div id="visual">Visual <span><span>72</span> / 100</div>
+            <div id="reaction"><img src="thunder.png" alt="thunder icon" width="15">Reaction <span><span>80</span> / 100</span></div>
+            <div id="memory"><img src="memory.png" alt="memory icon" width="15">Memory <span><span>92</span> / 100</div>
+            <div id="verbal"><img src="verbal.png" alt="verbal icon" width="15">Verbal <span><span>61</span> / 100</div>
+            <div id="visual"><img src="visualization.png" alt="visual icon" width="15">Visual <span><span>72</span> / 100</div>
             <button class="btn">Continue</button>
         </div>
         
