--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Results Summary Component</title>
 </head>
 <body>
-    <script src="script.js" defer></script>
     <div id="container">
         <div class="results">
             <h1>Your Results</h1>
@@ -17,11 +16,14 @@
         </div>
         <div class="summary">
             <h3>Summary</h3>
-            <div id="reaction"><img src="thunder.png" alt="thunder icon" width="15">Reaction <span><span>80</span> / 100</span></div>
-            <div id="memory"><img src="memory.png" alt="memory icon" width="15">Memory <span><span>92</span> / 100</div>
-            <div id="verbal"><img src="verbal.png" alt="verbal icon" width="15">Verbal <span><span>61</span> / 100</div>
-            <div id="visual"><img src="visualization.png" alt="visual icon" width="15">Visual <span><span>72</span> / 100</div>
+            <div id="data">
+                <div id="reaction"><img src="thunder.png" alt="thunder icon" width="15">Reaction <span class="percentage">80</span> / 100</div>
+            <div id="memory"><img src="memory.png" alt="memory icon" width="15">Memory  <span class="percentage">92</span> / 100</div>
+            <div id="verbal"><img src="verbal.png" alt="verbal icon" width="15">Verbal <span class="percentage">61</span> / 100</div>
+            <div id="visual"><img src="visualization.png" alt="visual icon" width="15">Visual <span class="percentage">72</span> / 100</div>
             <button class="btn">Continue</button>
+        </div>
+
         </div>
         
     </div>
